part4/parser.y
%{
/***********************************************************************
 * --YOUR GROUP INFO SHOULD GO HERE--
 * 
 *   Interface to the parser module for CSC467 course project.
 * 
 *   Phase 2: Implement context free grammar for source language, and
 *            parse tracing functionality.
 *   Phase 3: Construct the AST for the source language program.
 ***********************************************************************/

#include <string.h>

#include "common.h"
#include "ast.h"
#include "symbol.h"
#include "semantic.h"

#define YYERROR_VERBOSE
#define yTRACE(x)    { if (traceParser) fprintf(traceFile, "%s\n", x); }

void yyerror(char* s);
int yylex();
extern int yyline;

%}

%{
#define YYDEBUG 1
%}

%union {
  int as_int;
  int as_vec;
  float as_float;
  char *as_str;
  int as_func;
  node *as_ast;
}

%token          FLOAT_T
%token          INT_T
%token          BOOL_T
%token          CONST
%token          FALSE_C TRUE_C
%token          IF ELSE
%token          AND OR NEQ EQ LEQ GEQ

%token <as_vec>   VEC_T
%token <as_vec>   BVEC_T
%token <as_vec>   IVEC_T
%token <as_float> FLOAT_C
%token <as_int>   INT_C
%token <as_str>   ID
%token <as_func> FUNC

%left     OR
%left     AND
%left     EQ NEQ '<' LEQ '>' GEQ
%left     '+' '-'
%left     '*' '/'
%right    '^'
%right    '!' UMINUS
%left     '(' '['

%left     WITHOUT_ELSE
%left     WITH_ELSE

%type <as_ast> program
%type <as_ast> scope
%type <as_ast> declarations
%type <as_ast> statements
%type <as_ast> declaration
%type <as_ast> statement
%type <as_ast> type
%type <as_ast> expression
%type <as_ast> variable
%type <as_ast> arguments
%type <as_ast> arguments_opt

%expect 1

%start program

%%

program
  : scope 
      { yTRACE("program -> scope\n");
        ast = $1; }
  ;

scope
  : '{' declarations statements '}'
      { yTRACE("scope -> { declarations statements }\n");
        $$ = ast_allocate(SCOPE_NODE, $2, $3); }
  ;

declarations
  : declarations declaration
      { yTRACE("declarations -> declarations  declaration\n");
        $$ = ast_allocate(DECLARATIONS_NODE, $2, $1); }
  | 
      { yTRACE("declarations -> \n");
        $$ = NULL; }
  ;

statements
  : statements statement
      { yTRACE("statements -> statements statement\n");
        $$ = ast_allocate(STATEMENTS_NODE, $2, $1); }
  | 
      { yTRACE("statements -> \n");
        $$ = NULL; }
  ;

declaration
  : type ID ';' 
      { yTRACE("declaration -> type ID ;\n");
        $$ = ast_allocate(DECLARATION_NODE, 0, $1, $2, NULL); }
  | type ID '=' expression ';'
      { yTRACE("declaration -> type ID = expression ;\n");
        $$ = ast_allocate(DECLARATION_NODE, 0, $1, $2, $4); }
  | CONST type ID '=' expression ';'
      { yTRACE("declaration -> CONST type ID =  expression ;\n");
        $$ = ast_allocate(DECLARATION_NODE, 1, $2, $3, $5); }
  ;


statement
  : variable '=' expression ';'
      { yTRACE("statement -> variable = expression ;\n");
        $$ = ast_allocate(ASSIGNMENT_NODE, $1, $3); }
  | IF '(' expression ')' statement ELSE statement %prec WITH_ELSE
      { yTRACE("statement -> IF (  expression  ) statement ELSE statement \n");
        $$ = ast_allocate(IF_STMT_NODE, $3, $5, $7); }
  | IF '(' expression ')' statement %prec WITHOUT_ELSE
      { yTRACE("statement -> IF ( expression ) statement \n");
        $$ = ast_allocate(IF_STMT_NODE, $3, $5, NULL); }
  | scope 
      { yTRACE("statement -> scope \n");
        $$ = $1; }
  | ';'
      { yTRACE("statement -> ; \n");
        $$ = NULL; }
  ;


type
  : INT_T
      { yTRACE("type -> INT_T \n");
        $$ = ast_allocate(TYPE_NODE, INT_T, 0); }
  | IVEC_T
      { yTRACE("type -> IVEC_T \n");
        $$ = ast_allocate(TYPE_NODE, IVEC_T, $1); }
  | BOOL_T
      {  yTRACE("type -> BOOL_T \n");
        $$ = ast_allocate(TYPE_NODE, BOOL_T, 0); }
  | BVEC_T
      { yTRACE("type -> BVEC_T \n");
        $$ = ast_allocate(TYPE_NODE, BVEC_T, $1); }
  | FLOAT_T
      { yTRACE("type -> FLOAT_T \n");
        $$ = ast_allocate(TYPE_NODE, FLOAT_T, 0); }
  | VEC_T
      { yTRACE("type -> VEC_T \n");
        $$ = ast_allocate(TYPE_NODE, VEC_T, $1); }
  ;


expression
  : type '(' arguments_opt ')' %prec '('
      { yTRACE("expression -> type ( arguments_opt ) \n");
        $$ = ast_allocate(CONSTRUCTOR_NODE, $1, $3); }
  | FUNC '(' arguments_opt ')' %prec '('
      { yTRACE("expression  -> FUNC ( arguments_opt ) \n");
        $$ = ast_allocate(FUNCTION_NODE, $1, $3); }
  | '-' expression %prec UMINUS
      { yTRACE("expression -> - expression \n");
        $$ = ast_allocate(UNARY_EXPR_NODE, '-', $2); }
  | '!' expression %prec '!'
      { yTRACE("expression -> ! expression \n");
        $$ = ast_allocate(UNARY_EXPR_NODE, '!', $2); }
  | expression AND expression %prec AND
      { yTRACE("expression  -> expression AND expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, AND, $1, $3); }
  | expression OR expression %prec OR
      { yTRACE("expression -> expression OR expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, OR, $1, $3); }
  | expression EQ expression %prec EQ
      { yTRACE("expression -> expression EQ expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, EQ, $1, $3); }
  | expression NEQ expression %prec NEQ
      {  yTRACE("expression -> expression NEQ expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, NEQ, $1, $3); }
  | expression '<' expression %prec '<'
      { yTRACE("expression -> expression < expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, '<', $1, $3); }
  | expression LEQ expression %prec LEQ
      { yTRACE("expression  -> expression LEQ expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, LEQ, $1, $3); }
  | expression '>' expression %prec '>'
      { yTRACE("expression -> expression > expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, '>', $1, $3); }
  | expression GEQ expression %prec GEQ
      { yTRACE("expression -> expression GEQ expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, GEQ, $1, $3); }
  | expression '+' expression %prec '+'
      { yTRACE("expression -> expression + expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, '+', $1, $3); }
  | expression '-' expression %prec '-'
      { yTRACE("expression -> expression - expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, '-', $1, $3); }
  | expression '*' expression %prec '*'
      { yTRACE("expression  -> expression * expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, '*', $1, $3); }
  | expression '/' expression %prec '/'
      { yTRACE("expression -> expression / expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, '/', $1, $3); }
  | expression '^' expression %prec '^'
      { yTRACE("expression -> expression ^ expression \n");
        $$ = ast_allocate(BINARY_EXPR_NODE, '^', $1, $3); }
  | TRUE_C
      { yTRACE("expression -> TRUE_C \n");
        $$ = ast_allocate(BOOL_LITERAL_NODE, 1); }
  | FALSE_C
      { yTRACE("expression -> FALSE_C \n");
        $$ = ast_allocate(BOOL_LITERAL_NODE, 0); }
  | INT_C
      { yTRACE("expression  -> INT_C \n");
        $$ = ast_allocate(INT_LITERAL_NODE, $1); }
  | FLOAT_C
      { yTRACE("expression -> FLOAT_C \n");
        $$ = ast_allocate(FLOAT_LITERAL_NODE, $1); }
  | '(' expression ')'
      { yTRACE("expression  -> ( expression ) \n");
        $$ = $2; }
  | variable
      { yTRACE("expression -> variable \n");
        $$ = $1; }
  ;

variable
  : ID
      { yTRACE("variable -> ID \n");
        $$ = ast_allocate(VAR_NODE, $1, 0); }
  | ID '[' INT_C ']' %prec '['
      { yTRACE("variable -> ID [ INT_C ] \n");
        $$ = ast_allocate(VAR_NODE, $1, 1, $3); }
  ;

arguments
  : arguments ',' expression
      { yTRACE("arguments -> arguments , expression \n");
        $$ = ast_allocate(ARGUMENTS_NODE, $3, $1); }
  | expression
      { yTRACE("arguments -> expression \n");
        $$ = ast_allocate(ARGUMENTS_NODE, $1, NULL); }
  ;

arguments_opt
  : arguments
      { yTRACE("arguments_opt -> arguments \n");
        $$ = $1; }
  |
      { yTRACE("arguments_opt -> \n");
        $$ = NULL; }
  ;

%%

void yyerror(char* s) {
  if(errorOccurred) {
    return;
  } else {
    errorOccurred = 1;
  }
  fprintf(errorFile, "\nPARSER ERROR, LINE %d", yyline);
  if(strcmp(s, "parse error")) {
    if(strncmp(s, "parse error, ", 13)) {
      fprintf(errorFile, ": %s\n", s);
    } else {
      fprintf(errorFile, ": %s\n", s+13);
    }
  } else {
    fprintf(errorFile, ": Reading token %s\n", yytname[YYTRANSLATE(yychar)]);
  }
}
